<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <include layout="@layout/toolbar" />
        <LinearLayout
                android:layout_below="@id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
                android:orientation="vertical"
                android:layout_margin="@dimen/common_overall_margin">

            <EditText
                    android:id="@+id/input_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_first_name"
                    android:layout_marginBottom="@dimen/common_overall_margin"/>
            <EditText
                    android:id="@+id/input_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_last_name"
                    android:layout_marginBottom="@dimen/common_overall_margin"/>
            <EditText
                    android:id="@+id/input_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_country"
                    android:layout_marginBottom="@dimen/common_overall_margin"/>
            <EditText
                    android:id="@+id/input_passport_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_identification"
                    android:layout_marginBottom="@dimen/common_overall_margin"/>

            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <RadioButton
                        android:id="@+id/rd_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>
                <RadioButton
                        android:id="@+id/rd_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
            </RadioGroup>
            <EditText
                    android:id="@+id/input_phone_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:inputType="number"
                    android:layout_marginBottom="@dimen/common_overall_margin"/>
            <EditText
                    android:id="@+id/input_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:layout_marginBottom="@dimen/common_overall_margin"/>

            <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_marginTop="@dimen/common_overall_margin"
                    android:background="@drawable/custom_blue_blackground"
                    android:textColor="@android:color/background_light"
                    android:textAllCaps="false"
                    />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
