<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CandidateDetailsActivity">
    <include layout="@layout/toolbar"/>
    <LinearLayout
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:orientation="vertical"
            android:layout_margin="@dimen/common_overall_margin">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/smallest_margin">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:paddingLeft="@dimen/common_overall_margin"
                    android:textStyle="bold"
                    android:text="@string/candidate_name"/>
            <TextView
                    android:id="@+id/tv_can_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_marginLeft="@dimen/smallest_margin"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/smallest_margin">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:paddingLeft="@dimen/common_overall_margin"
                    android:textStyle="bold"
                    android:text="@string/country"/>
            <TextView
                    android:id="@+id/tv_can_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_marginLeft="@dimen/smallest_margin"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/smallest_margin">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:paddingLeft="@dimen/common_overall_margin"
                    android:textStyle="bold"
                    android:text="@string/passport_num"/>
            <TextView
                    android:id="@+id/tv_can_passport_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_marginLeft="@dimen/smallest_margin"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/smallest_margin">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:paddingLeft="@dimen/common_overall_margin"
                    android:textStyle="bold"
                    android:text="@string/gender"/>
            <TextView
                    android:id="@+id/tv_candidate_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_marginLeft="@dimen/smallest_margin"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/smallest_margin">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:paddingLeft="@dimen/common_overall_margin"
                    android:textStyle="bold"
                    android:text="@string/contact"/>
            <TextView
                    android:id="@+id/tv_candidate_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_marginLeft="@dimen/smallest_margin"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/smallest_margin">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:paddingLeft="@dimen/common_overall_margin"
                    android:textStyle="bold"
                    android:text="@string/email"/>
            <TextView
                    android:id="@+id/tv_can_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_marginLeft="@dimen/smallest_margin"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>